--- a/css/styles.css
+++ b/css/styles.css
@@ -130,7 +130,8 @@ img {
 .auth-nav-link {
   padding-top: 32px;
   padding-bottom: 32px;
-  display: inline-block;
+  display: flex;
+  align-items: center;
   color: var(--second-text-color);
   font-size: 14px;
 }
@@ -155,17 +156,15 @@ img {
 
 .icon-mail {
   margin-right: 10px;
-  width: 16px;
-  height: 12px;
+  fill: currentColor;
 }
 
 .icon-phone {
   margin-right: 10px;
-  width: 10px;
-  height: 16px;
+  fill: currentColor;
 }
 
-.auth-nav-link:hover .icon-phone {
+.auth-nav-link:hover {
   color: var(--accent-color);
 }
 
@@ -352,37 +351,42 @@ img {
   padding: 30px;
 }
 
-.icon-social-team {
+.icon-social-team-list {
   list-style: none;
   display: flex;
-  align-items: center;
   justify-content: center;
 }
 
-.icon-team-social-link:not(:last-child) {
+.icon-team-social-item:not(:last-child) {
   margin-right: 10px;
 }
 
-.icon-team-social-link {
+.icon-team-social-item {
   width: 44px;
   height: 44px;
-  padding: 12px;
-  border: none;
-  border-radius: 50%;
   cursor: pointer;
 }
 
-.icon-team-social-item {
+.social-link-icon {
+ width: 100%;
+ height: 100%;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #afb1b8;
+}
+
+.icon-team-social {
   width: 20px;
   height: 20px;
+  fill: currentColor
 }
 
-.social-link-icon {
-  display: block;
-}
-
-.icon-team-social-link:hover {
+.social-link-icon:hover,
+.social-link-icon:focus {
   background-color: var(--accent-color);
+  color: #ffffff;
 }
 
 .team-list > .team-item {
@@ -429,9 +433,12 @@ img {
 .clients-item {
   width: 170px;
   height: 92px;
+  cursor: pointer;
   border: 1px solid #afb1b8;
   border-radius: 4px;
-  padding: 16px 32px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .clients-item:not(:last-child) {
@@ -439,10 +446,9 @@ img {
 }
 
 .clients-link {
-  align-items: center;
-  justify-content: center;
-  cursor: pointer;
-  fill: #afb1b8;
+  width: 100%;
+  height: 100%;
+  color: #afb1b8;
 }
 
 .clients-logo {
@@ -451,14 +457,14 @@ img {
   fill: currentColor;
 }
 
-.clients-link:hover,
-.clients-link:focus {
+.clients-item:hover,
+.clients-item:focus {
   border: solid 1px var(--accent-color);
 }
 
-.clients-link:hover .clients-logo,
-.clients-link:focus .clients-logo {
-  fill: var(--accent-color);
+.clients-item:hover .clients-logo,
+.clients-item:focus .clients-logo {
+  color: var(--accent-color);
 }
 
 /* portfolio button*/
@@ -588,7 +594,7 @@ img {
 
 .footer-social {
   margin-left: 70px;
-}
+  }
 
 .footer-social-title {
   font-weight: 700;
@@ -601,8 +607,9 @@ img {
 }
 
 .footer-social-list {
-  list-style: none;
   display: flex;
+  list-style: none;
+  justify-content: center;
 }
 
 .footer-social-item {
@@ -614,13 +621,28 @@ img {
   border-radius: 50%;
   background: rgba(255, 255, 255, 0.1);
   cursor: pointer;
+  color: #afb1b8;
 }
 
 .footer-social-link {
-}
+width: 100%;
+ height: 100%;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #afb1b8;
+  }
 
 .footer-social-item:not(:last-child) {
   margin-right: 10px;
+}
+
+
+.footer-social-icon {
+  width: 20px;
+  height: 20px;
+  fill: currentColor;
 }
 
 .footer-social-item:hover,
@@ -628,7 +650,8 @@ img {
   background-color: var(--accent-color);
 }
 
-.footer-social-icon {
-  width: 20px;
-  height: 20px;
+.footer-social-item:hover .footer-social-icon,
+.footer-social-item:focus .footer-social-icon{
+  color: var(--primary-white-tx-bg-color);
 }
+
