--- a/css/styles.css
+++ b/css/styles.css
@@ -194,6 +194,10 @@ img {
 }
 
 .hero-title {
+  width: 696px;
+  display: block;
+  margin: auto;
+
   margin-bottom: 30px;
   color: var(--primary-white-tx-bg-color);
 
@@ -433,12 +437,6 @@ img {
 .clients-item {
   width: 170px;
   height: 92px;
-  cursor: pointer;
-  border: 1px solid #afb1b8;
-  border-radius: 4px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
 }
 
 .clients-item:not(:last-child) {
@@ -448,6 +446,12 @@ img {
 .clients-link {
   width: 100%;
   height: 100%;
+   cursor: pointer;
+  border: 1px solid #afb1b8;
+  border-radius: 4px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   color: #afb1b8;
 }
 
