--- a/css/styles.css
+++ b/css/styles.css
@@ -510,6 +510,10 @@ img {
   border-radius: 4px;
 }
 
+.portfolio-btn:hover {
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+}
+
 /* work*/
 .work-set {
   list-style: none;
@@ -525,6 +529,12 @@ img {
   margin-top: 30px;
   background: #ffffff;
   border-bottom: 1px solid #eeeeee;
+  cursor: pointer;
+}
+
+.card-item:hover,
+.card-item:focus {
+box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
 .work-card {
