--- a/css/styles.css
+++ b/css/styles.css
@@ -510,8 +510,8 @@ img {
   border-radius: 4px;
 }
 
-.portfolio-btn:hover,
-.portfolio-btn:focus {
+.button-item:hover,
+.button-item:focus {
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
@@ -665,8 +665,8 @@ width: 100%;
   fill: currentColor;
 }
 
-.footer-social-item:hover,
-.footer-social-item:focus {
+.footer-social-link:hover,
+.footer-social-link:focus {
   background-color: var(--accent-color);
 }
 
