--- a/css/styles.css
+++ b/css/styles.css
@@ -531,8 +531,12 @@ img {
   cursor: pointer;
 }
 
-.card-item:hover,
-.card-item:focus {
+.card-link {
+  display: inline-block;
+}
+
+.card-link:hover,
+.card-link:focus {
 box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
